# orion-framework

./: .gitignore  CMakeLists.txt  README.md  common_interface.h  my_service.cpp
.github/workflows/: build.yml  build_mingw.yml  build_windows.txt  build_windows.yml
src/: main.cpp
src/core/: service_manager.cpp  service_manager.h
src/modules/plugin_a/: CMakeLists.txt  plugin_a.cpp  plugin_a.h
src/modules/plugin_b/: CMakeLists.txt  plugin_b.cpp  plugin_b.h
